# consume

./: .gitignore  README.md  afk-ralph.sh  context.md  prd.md  prd_tasks.md  pyproject.toml  ralph-once.sh  tasks.md  urls.txt  use.md
consume/: auth.py  batch.py  browser.py  cli.py  extractor.py  library.py  renderer.py  spinner.py  summarizer.py  utils.py
tests/: test_browser.py  test_cli.py  test_extract_content.py  test_fetch_html.py  test_integration_smoke.py  test_summarize.py  test_url_validation.py
tests/fixtures/: minimal_page.html  normal_page.html
