[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "consume"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "readability-lxml",
    "anthropic",
    "python-dotenv",
]

[project.scripts]
consume = "consume.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require network and API access (deselect with '-m not integration')",
]
